hphp/test/slow/ext_ldap/t78806688.php.expectf
Fatal error: String length exceeded: 4294967307 > %d in %s/t78806688.php on line 7
